# grid-indexing

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Cargo.toml  README.md  _typos.toml  pyproject.toml  zizmor.yml
.github/workflows/: CI.yml  python-ci.yml  rust-ci.yml  wheels.yml
ci/requirements/: docs.yaml  environment-rust.yaml  environment.yaml
docs/: api-hidden.rst  api.rst  conf.py  index.md
docs/examples/: distributed-rtree.ipynb  infer-cell-geometries.ipynb  overlap-query.ipynb
python/grid_indexes/: __init__.py
python/grid_indexing/: __init__.py  distributed.py  grids.py  tutorial.py  util.py
python/grid_indexing/tests/: test_distributed.py  test_rtree.py
python/tests/: test_all.py  test_distributed.py  test_grids.py  test_rtree.py  test_util.py
scripts/: create_data.py
src/: index.rs  lib.rs  python.rs  rtreeobject.rs  trait_.rs
