[package]
name = "grid-indexing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "grid_indexing"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
geo = { version = "0.29.3", features = [
  "multithreading",
  "serde",
  "use-proj",
  "use-serde",
] }
geoarrow = "0.4.0-beta.2"
numpy = "0.23.0"
proj = { version = "0.27.0", features = ["pkg_config"] }
pyo3 = { version = "0.23.3", features = ["serde"] }
pyo3-arrow = "0.6.0"
rstar = { version = "0.12.2", features = ["serde"] }
serde = "1.0.217"
