[package]
name = "grid-indexing"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "grid_indexing"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3"
geo = { version = "0.29", features = [
  "multithreading",
  "serde",
  "use-proj",
  "use-serde",
] }
geoarrow = "0.4.0-beta.4"
numpy = "0.24"
proj = { version = "0.27", features = ["pkg_config"] }
pyo3 = { version = "0.24", features = ["serde"] }
pyo3-arrow = "0.8"
arrow = "54.3"
rstar = { version = "0.12", features = ["serde"] }
serde = "1.0"
