[package]
name = "grid-indexing"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "grid_indexing"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3"
geo = { version = "0.31", features = [
  "multithreading",
  "serde",
  "use-proj",
  "use-serde",
] }
numpy = "0.26"
proj = { version = "0.31", features = ["pkg_config"] }
pyo3 = { version = "0.26", features = ["serde"] }
pyo3-arrow = "0.14"
arrow = "57"
rstar = { version = "0.12", features = ["serde"] }
serde = "1.0"
geoarrow-array = "0.6.1"
geoarrow-cast = "0.6.1"
pyo3-geoarrow = "0.6.1"
geo-traits = "0.3.0"
geoarrow-schema = "0.6.2"
